--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-flat": "^3.3.4",
     "compromise": "^11.2.2",
+    "downloadjs": "^1.4.7",
+    "draft-js": "^0.10.4",
+    "es6-shim": "^0.35.3",
     "husky": "^0.14.3",
+    "immutability-helper": "^2.6.4",
     "lint-staged": "^6.0.0",
     "prettier": "^1.10.2",
     "react": "^16.2.0",
@@ -23,7 +29,10 @@
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.8",
     "@storybook/addon-links": "^3.3.8",
-    "@storybook/react": "^3.3.8"
+    "@storybook/react": "^3.3.8",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
